# datainfra-test

./: .gitignore  README.md  pyproject.toml  requirements.txt  数据工程平台需求v2.0.md  算力服务化平台架构设计v2.0.md  算力服务化平台详细设计v1.0.md
docs/: 10-数据工程平台_需求_v2.0.md  11-算力服务化平台_架构设计_v2.0.md  12-算力服务化平台_详细设计_v1.0.md  20-NPU统一推理算力池_需求_v2.md  21-NPU统一推理算力池_设计_v2.md  NPU统一推理算力池设计_v2.md  数据工程平台需求v2.0.md  算力服务化平台详细设计v1.0.md
examples/: quickstart.py  serve.py
src/compute_platform/: __init__.py  config.py  inference.py  models.py  objectstore.py  registry.py  sharder.py  worker.py
src/compute_platform/batch_api/: __init__.py  app.py  service.py
src/compute_platform/governance/: __init__.py  lineage.py  metering.py  quota.py
src/compute_platform/queue/: __init__.py  base.py  sqlite_queue.py
src/compute_platform/scheduler/: __init__.py  controller.py  fairshare.py  locality.py  pools.py  preemption.py
src/inference_pool/: __init__.py  autoscaler.py  cache_affinity.py  card_pool.py  gateway.py  models.py  offline_pool.py  platform.py
tests/: conftest.py  test_batch_api.py  test_controller.py  test_end_to_end.py  test_fairshare.py  test_governance.py  test_lineage.py  test_locality.py  test_objectstore.py  test_pools.py  test_preemption.py  test_queue.py  test_service_governance.py  test_sharder.py  test_worker.py
tests/inference_pool/: conftest.py  test_autoscaler.py  test_cache_affinity.py  test_card_pool.py  test_gateway.py  test_offline_pool.py  test_scenarios.py
